# ai-guardrails-itmo-workshop

./: .env.example  README.md  guardrails.ipynb  main.py  pyproject.toml
